invisible cart text fix

--- a/app/assets/stylesheets/store.css
+++ b/app/assets/stylesheets/store.css
@@ -360,3 +360,23 @@ width: 400px;
 display: inline-block;
 vertical-align: bottom;
 }
+#cart-text{
+display: inline-block;
+background: #386311;
+color: #fff;
+padding: 0.3em 1em;
+text-align: center;
+border-radius: 4px;
+border: 0px solid #a00;
+cursor: auto;
+}
+#cart-text:hover{
+display: inline-block;
+background: #000;
+color: #fff;
+padding: 0.3em 1em;
+text-align: center;
+border-radius: 4px;
+border: 0px solid #a00;
+cursor: auto;
+}
